chore: release prep 0.2.0 (publishConfig + CHANGELOG + README)
Bump to 0.2.0, add publishConfig.access=public so the scoped
@recube/cli package can be published to the public npm registry without
explicit `--access` on every push, document doctor / runtime_config /
sibling-jar / versions cascade in README, seed CHANGELOG.

`npm publish` will be triggered manually by a maintainer when ready —
this commit only prepares the artifacts.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>